# viloxterm

./: .design-lock.yml  .envrc  .gitignore  .gitmodules  .implementation-context.md  .migration_state.json  .pre-commit-config.yaml  AGENT_FILES_IMPORTANT.md  ARCHITECTURE-NORTHSTAR.md  ARCHITECTURE_FIX_SUMMARY.md  ARCHITECTURE_RESTORATION_COMPLETE.md  CLAUDE.md  COMMAND_PALETTE_INTEGRATION_STATUS.md  COMMAND_SYSTEM_COMPLETION_PLAN.md  COMMAND_SYSTEM_FIX_PLAN.md  ENVIRONMENT_DETECTION.md  FIX_COMMAND_ARGUMENTS.md  FIX_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GUIDE.md  MONOREPO_PACKAGE_STRUCTURE.md  MainTabbedSplitPanes.md  Makefile  PROJECT.md  README.md  STATE_PERSISTENCE_DESIGN.md  THEME_SYSTEM_SUCCESS.md  WHITE_FLASH_ARCHITECTURE.md  WHITE_FLASH_ELIMINATION.md  build.txt  debug_focus.py  debug_logging_enhancement.py  demo_clean_architecture.py  enable_chrome_mode.py  error.txt  logging_config.py  main.py  monitor_widget_refactoring.sh  pyproject.toml  pysidedeploy.spec  pytest.ini  (+51 more)
.claude/: CLAUDE.md
agents/: anti-drift-protocol.md  implementation-coder.md
builder/: Dockerfile  README.md  ViloxTerm.desktop  build-onefile.sh  build.sh  create-appimage.sh  docker-compose.yml  entrypoint.sh
controllers/: __init__.py  state_controller.py
core/: __init__.py  app_config.py  app_widget_manager.py  app_widget_metadata.py  app_widget_registry.py  environment_detector.py  version.py  widget_placement.py
deploy/: pysidedeploy.spec
docs/: ARCHITECTURE-OVERVIEW.md  BIG-BANG-COMPLETE-SUMMARY.md  BIG-BANG-TRACKER.md  CHROME_MODE.md  CHROME_MODE_LEARNINGS.md  PluginArchitecture.md  PluginAuthorGuide.md  THEME_SYSTEM_DOCUMENTATION.md  VILOAPP-NG.md  WEBENGINE_SHORTCUTS.md  api-specifications-DESIGN.md  architecture-BIG-BANG-REFACTOR.md  architecture-BRIDGES.md  architecture-fix-FINAL-VALIDATION-REPORT.md  architecture-fix-IMPLEMENTATION-PLAN.md  architecture-fix-MODEL-SYNC-PLAN.md  architecture-fix-STARTUP-GUIDE.md  architecture-fix-TRACKER.md  architecture-long-term-VISION.md  architecture-next-steps-PLAN.md  architecture-refactor-JOURNEY.md  architecture-refactor-RETROSPECTIVE.md  architecture-refactoring-TASKS.md  architecture-systematic-fix-ROADMAP.md  architecture-violations-REPORT.md  capability-system-DESIGN.md  command-architecture-CLARIFICATION.md  command-architecture-FINAL.md  design-principles-CHECKLIST.md  dynamic-widget-menu-IMPLEMENTATION-PLAN.md  platform-purity-refactor-PLAN.md  platform-purity-refactor-TASKS.md  platform-transformation-COMPLETE.md  platform-transformation-SUMMARY.md  plugin-package-structure-ANALYSIS.md  refactoring-100-PERCENT-COMPLETE.md  refactoring-COMPLETION-SUMMARY.md  refactoring-PROGRESS.md  refactoring-REMAINING-WORK.md  refactoring-SESSION-COMPLETE.md  (+7 more)
models/: __init__.py  layout_state.py
references/: tree-split.py
resources/: __init__.py  resources.qrc
scripts/: build.py  (+7 more)
(+391 files in other folders)
