[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viloapp-workspace"
version = "0.0.1"
description = "ViloxTerm monorepo workspace"
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch]
# Workspace configuration
[tool.hatch.build]
packages = [
    "packages/viloapp-sdk",
    "packages/viloxterm",
    "packages/viloedit",
    "packages/viloapp"
]

[tool.pytest]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
src = ["packages/*/src"]
extend-include = ["packages/*/tests/*.py"]
line-length = 100
target-version = "py38"

[tool.mypy]
packages = ["viloapp", "viloapp_sdk", "viloxterm", "viloedit"]
namespace_packages = true
explicit_package_bases = true
python_version = "3.8"

[tool.black]
line-length = 100
target-version = ['py38']
include = 'packages/.*\.py$'